# drf-hooks

./: .gitignore  .travis.yml  AUTHORS.md  LICENSE.md  MANIFEST  Makefile  README.md  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: ci.yml
drf_hooks/: admin.py  client.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
drf_hooks/migrations/: 0001_initial.py  0002_alter_hook_user.py
rest_hooks/: models.py
rest_hooks/migrations/: 0003_hook_header.py
tests/: settings.py  test_hooks.py
